--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -29,7 +29,7 @@ ru:
     saved: Информация о пользователе успешно сохранена
   organization:
     enter_phone: Введите номер организации в формате +7ХХХХХХХХХХ
-    exist: Организация с таким номером уже существует
+    exist: "Такой номер уже есть и принадлежит %{org_name}.\nВведите следующий номер."
     enter_name: Введите название организации
     enter_source: Введите URL источника
     saved: Информация успешно сохранена
