--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -22,7 +22,7 @@ ru:
   save_success: Данные успешно сохранены
   hello: Здравствуй, %{name}!
   user:
-    enter_phone: 'Введите номер пользователя в формате +7ХХХХХХХХ'
+    enter_phone: 'Введите номер сотрудника в формате +7ХХХХХХХХ'
     select_role: Выберите роль
     not_found: Пользователь с таким номером не найден, обратитесь к администратору
     invalid_phone: Некорректно введён номер
@@ -30,10 +30,10 @@ ru:
     saved: Информация о пользователе успешно сохранена
   organization:
     enter_phone: Введите номер организации в формате +7ХХХХХХХХХХ
-    exist: "Такой номер уже есть и принадлежит %{org_name}.\nВведите следующий номер."
-    enter_name: Введите название организации
-    enter_source: Введите URL источника
+    exist: Организация с таким номером и названием уже существует. Введите следующий номер.
+    enter_name: Введите название организации:
+    enter_source: Введите URL источника в формате http/https/www:
     saved: Информация успешно сохранена
-    enter_address: Введите адрес
-    new_record: Добавлена информация о организации %{name}
+    enter_address: Введите почтовый адрес  в формате г./Г./город:
+    new_record: Добавлена информация об организации %{name}
 
